# cmake-qt-sample

./: CMakeLists.txt  InstallRuntimeDeps.cmake  PrintAllVars.cmake  config.h.in  mainwindow.cpp  mainwindow.ui  readme.md
cmake/: DeployQt5.cmake
